--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,33 @@
-.color-orange { color: #d28e5d;}
-.color-red { color: #dc3c3c;}
-.color-fusia { color: #b73999;}
-.color-purple { color: #8485ce;}
-.color-forest-green { color: #64878f;}
-.color-mint-green { color: #95c76f;}
-.color-green { color: #52bd58;}
-.color-blue-green { color: #00aba5;}
-.color-blue { color: #4670d8;}
-.bg-dark { background-color: #20222B; }
+.color-orange {
+  color: #d28e5d;
+}
+.color-red {
+  color: #dc3c3c;
+}
+.color-fusia {
+  color: #b73999;
+}
+.color-purple {
+  color: #8485ce;
+}
+.color-forest-green {
+  color: #64878f;
+}
+.color-mint-green {
+  color: #95c76f;
+}
+.color-green {
+  color: #52bd58;
+}
+.color-blue-green {
+  color: #00aba5;
+}
+.color-blue {
+  color: #4670d8;
+}
+.bg-dark {
+  background-color: #20222b;
+}
 
 :root {
   color-scheme: light dark;
@@ -15,10 +35,10 @@
 }
 
 html {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Microsoft YaHei', 'Segoe UI',
-    Ubuntu, Roboto, Oxygen, Cantarell, 'Fira Sans', 'Droid Sans',
-    'Helvetica Neue', Helvetica, Arial, Verdana, 'Lucida Grande',
-    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Microsoft YaHei",
+    "Segoe UI", Ubuntu, Roboto, Oxygen, Cantarell, "Fira Sans", "Droid Sans",
+    "Helvetica Neue", Helvetica, Arial, Verdana, "Lucida Grande", sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji";
   font-size: 17px;
   font-weight: 400;
   line-height: 1.5;
@@ -75,11 +95,11 @@ h4 {
 }
 
 h5 {
-  font-size: .875em;
+  font-size: 0.875em;
 }
 
 h6 {
-  font-size: .85em;
+  font-size: 0.85em;
 }
 
 blockquote,
@@ -93,12 +113,12 @@ q {
 }
 
 mark {
-  background-color: rgba(12, 242, 143, .2);
+  background-color: rgba(12, 242, 143, 0.2);
 }
 
 mark {
-  padding-left: .15em;
-  padding-right: .15em;
+  padding-left: 0.15em;
+  padding-right: 0.15em;
   border-radius: 3px;
 }
 
@@ -106,7 +126,7 @@ code,
 tt,
 kbd,
 samp {
-  font-family: Menlo, Consolas, 'Liberation Mono', monospace;
+  font-family: Menlo, Consolas, "Liberation Mono", monospace;
   font-weight: 400;
   font-size: 85%;
 }
@@ -118,7 +138,7 @@ pre {
   line-height: 1.5em;
   margin: 0;
   padding: 16px;
-  
+
   border-radius: 3px;
   background-color: #f6f8fa;
 
@@ -134,7 +154,7 @@ kbd,
 tt,
 samp {
   color: #c33;
-  padding: .2em .4em;
+  padding: 0.2em 0.4em;
   margin: 0;
   font-size: 85%;
   background-color: #f9f6f6;
@@ -195,7 +215,7 @@ acronym {
 
 strong,
 b {
-  color: rgba(29, 43, 76, .85);
+  color: rgba(29, 43, 76, 0.85);
 }
 
 .image-container,
@@ -210,8 +230,8 @@ b {
 
 .image-container .title {
   display: inline-block;
-  opacity: .6;
-  font-size: .875em;
+  opacity: 0.6;
+  font-size: 0.875em;
   text-align: initial;
   min-height: 22px;
   padding: 10px 5px;
@@ -222,7 +242,7 @@ b {
   padding-bottom: 20px;
   min-height: 64px;
   margin-bottom: 30px;
-  
+
   background-color: #fff;
 }
 
@@ -233,7 +253,7 @@ b {
 }
 
 #footer {
-  font-size: .75em;
+  font-size: 0.75em;
   margin-top: 48px;
   margin-bottom: 30px;
 }
@@ -247,8 +267,8 @@ b {
   margin-top: -5px;
 }
 
-.header.wrap>*,
-.nav.wrap>* {
+.header.wrap > *,
+.nav.wrap > * {
   margin-top: 5px;
 }
 
@@ -279,11 +299,11 @@ b {
 }
 
 .site.name {
-  color: rgba(29, 43, 76, .85);
+  color: rgba(29, 43, 76, 0.85);
 }
 
 .site.slogan {
-  font-size: .875em;
+  font-size: 0.875em;
   text-align: center;
 }
 
@@ -304,13 +324,13 @@ b {
 }
 
 .date {
-  font-size: .875em;
+  font-size: 0.875em;
 }
 
 .langs {
   display: inline-block;
   list-style: none;
-  font-size: .875em;
+  font-size: 0.875em;
 }
 
 .lang {
@@ -329,29 +349,28 @@ b {
   padding: 20px;
   background-color: #fff;
   border-radius: 6px;
-  box-shadow: inset -1px 0 0 0 rgba(224, 227, 231, .6),
-              inset 0 -1px 0 0 #e0e4e7, inset 1px 0 0 0 rgba(224, 227, 231, .6);
+  box-shadow: inset -1px 0 0 0 rgba(224, 227, 231, 0.6),
+    inset 0 -1px 0 0 #e0e4e7, inset 1px 0 0 0 rgba(224, 227, 231, 0.6);
 }
 
 .note.list .item:hover {
-  box-shadow: 0 2px 6px 0 #e0e4e7,
-              inset -1px 0 0 0 rgba(224, 227, 231, .3), inset 0 -1px 0 0 #e0e4e7,
-              inset 1px 0 0 0 rgba(224, 227, 231, .2);
+  box-shadow: 0 2px 6px 0 #e0e4e7, inset -1px 0 0 0 rgba(224, 227, 231, 0.3),
+    inset 0 -1px 0 0 #e0e4e7, inset 1px 0 0 0 rgba(224, 227, 231, 0.2);
 }
 
 .nav.item:hover {
-  opacity: .5;
+  opacity: 0.5;
   text-decoration: none;
 }
 
 .tag:hover,
 .category:hover {
-  opacity: .5;
+  opacity: 0.5;
   text-decoration: none;
 }
 
 .title {
-  color: rgba(29, 43, 76, .85);
+  color: rgba(29, 43, 76, 0.85);
 }
 
 .note {
@@ -370,7 +389,7 @@ b {
 }
 
 .mldr {
-  opacity: .6;
+  opacity: 0.6;
 }
 
 .note.title,
@@ -423,18 +442,18 @@ b {
 
 .tag::before {
   content: "\23";
-  opacity: .5;
+  opacity: 0.5;
 }
 
 .tag {
-  color: rgba(29, 43, 76, .85);
+  color: rgba(29, 43, 76, 0.85);
 }
 
 .category {
   padding: 0 6px;
   border-radius: 3px;
   color: #fff;
-  background-color: rgba(29, 43, 76, .85);
+  background-color: rgba(29, 43, 76, 0.85);
 }
 
 .article.labels,
@@ -455,7 +474,7 @@ b {
   margin: 0;
 }
 
-.article.navigation p+p {
+.article.navigation p + p {
   margin-top: 5px;
 }
 
@@ -475,7 +494,7 @@ b {
   text-align: center;
 }
 
-.article.author>* {
+.article.author > * {
   margin-top: 16px;
 }
 
@@ -502,13 +521,13 @@ b {
 
 .article.author .details .item:hover {
   text-decoration: none;
-  opacity: .5;
+  opacity: 0.5;
 }
 
 .slogan,
 .date,
 .license {
-  color: rgba(23,81,153,.72);
+  color: rgba(23, 81, 153, 0.72);
 }
 
 .pagination {
@@ -542,13 +561,13 @@ b {
 }
 
 .pagination ul li a:hover:not(.active) {
-  background-color: rgba(0, 102, 204, .5);
+  background-color: rgba(0, 102, 204, 0.5);
 }
 
 .article-container {
   padding: 20px;
   border-radius: 6px;
-  box-shadow: 0 12px 16px 0 rgba(29, 43, 76, .12);
+  box-shadow: 0 12px 16px 0 rgba(29, 43, 76, 0.12);
 }
 
 .article-container {
@@ -561,7 +580,12 @@ b {
   margin-top: 20px;
   margin-bottom: 20px;
 
-  background-image: linear-gradient(90deg, rgba(50, 0, 0, 0.05) 3%, rgba(0, 0, 0, 0) 3%), linear-gradient(360deg, rgba(50, 0, 0, 0.05) 3%, rgba(0, 0, 0, 0) 3%);
+  background-image: linear-gradient(
+      90deg,
+      rgba(50, 0, 0, 0.05) 3%,
+      rgba(0, 0, 0, 0) 3%
+    ),
+    linear-gradient(360deg, rgba(50, 0, 0, 0.05) 3%, rgba(0, 0, 0, 0) 3%);
   background-size: 20px 20px;
   background-position: center center;
 }
@@ -585,6 +609,11 @@ b {
 
 .article.markdown-body img {
   border-radius: 3px;
+  max-height: 480px;
+  max-width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 
   -ms-transform: scale(1);
   -ms-transition: transform 0.25s ease-in-out 0s;
@@ -597,6 +626,10 @@ b {
 
   transform: scale(1);
   transition: transform 0.25s ease-in-out 0s;
+}
+
+.article.markdown-body a:hover {
+  text-decoration-line: underline;
 }
 
 .article.markdown-body img:hover {
@@ -620,12 +653,12 @@ b {
 
 .article.markdown-body blockquote {
   padding: 0 1em;
-  border-left: .25em solid #dfe2e5;
+  border-left: 0.25em solid #dfe2e5;
 }
 
 .article.markdown-body q::before,
 .article.markdown-body q::after {
-  opacity: .6;
+  opacity: 0.6;
 }
 
 .article.markdown-body q::before {
@@ -650,7 +683,7 @@ b {
 }
 
 .article.markdown-body hr {
-  opacity: .4;
+  opacity: 0.4;
   border-top-style: dashed;
   border-top-color: inherit;
 }
@@ -685,27 +718,27 @@ b {
   max-width: 25%;
 }
 
-.article.markdown-body li+li {
+.article.markdown-body li + li {
   margin-top: 20px;
 }
 
-.article.markdown-body>*,
-.article.markdown-body li>*,
-.article.markdown-body blockquote>*,
-.article.markdown-body .footnotes>* {
+.article.markdown-body > *,
+.article.markdown-body li > *,
+.article.markdown-body blockquote > *,
+.article.markdown-body .footnotes > * {
   margin-top: 0;
   margin-bottom: 20px;
 }
 
-.article.markdown-body> :first-child,
-.article.markdown-body li> :first-child,
-.article.markdown-body blockquote> :first-child {
+.article.markdown-body > :first-child,
+.article.markdown-body li > :first-child,
+.article.markdown-body blockquote > :first-child {
   margin-top: 0;
 }
 
-.article.markdown-body> :last-child,
-.article.markdown-body li> :last-child,
-.article.markdown-body blockquote> :last-child {
+.article.markdown-body > :last-child,
+.article.markdown-body li > :last-child,
+.article.markdown-body blockquote > :last-child {
   margin-bottom: 0;
 }
 
@@ -743,7 +776,7 @@ b {
 .article.markdown-body .katex-display,
 .article.markdown-body .MathJax_Display {
   margin: 0;
-  padding: .2em .4em;
+  padding: 0.2em 0.4em;
 }
 
 .article.markdown-body .MathJax {
@@ -776,6 +809,6 @@ b {
   border: 0;
 }
 
-.article.markdown-body .lntable tr>:first-child {
+.article.markdown-body .lntable tr > :first-child {
   border-right: 1px dashed #e6e6e6;
 }
