--- a/layouts/partials/article-comments.html
+++ b/layouts/partials/article-comments.html
@@ -1,7 +1,13 @@
-{{- if gt (len site.DisqusShortname) 0 -}}
-    {{- if or (eq .Params.comments true) (and (ne .Params.comments false) (eq site.Params.comments.enable true)) -}}
-        <section class="article discussion">
-            {{- template "_internal/disqus.html" . -}}
-        </section>
-    {{- end -}}
+
+{{- if or (eq .Params.comments true) (and (ne .Params.comments false) (eq site.Params.comments.enable true)) -}}
+    <section class="article discussion">
+        <script src="https://utteranc.es/client.js"
+            repo="yangkghjh/homelab-weekly-comment"
+            issue-term="pathname"
+            label="Comment"
+            theme="dark-blue"
+            crossorigin="anonymous"
+            async>
+        </script>
+    </section>
 {{- end -}}
